Inclusão de arquivos da atividade finalizada

--- a/estilos.css
+++ b/estilos.css
@@ -1,28 +1,52 @@
-/* estilos gerais da página */
-html, body {
+/*
+_______________________________________________________
+Centro Federal de Educação Tecnológica de Minas Gerais
+Programação WEB: Atividade Plantas Carnívoras
+Alunas: Daniele Lima, Daniela Lourenço
+_______________________________________________________
+Estilos gerais da página */
+html,body{
   min-height: 100%;
 }
 
-.recuo { text-indent:4em }
-
-body {
+body{
   margin: 0 auto;
-  max-width: 1200px;
   background-image: url("imagens/fundo.png");
-  font-family: Arial;
+  font-family: "Arial", cursive;
   margin-left: 3%;
   margin-right: 3%;
 }
 
-h1 {
+h1{
   margin-top: 25;
-  font-family: "Time New Roman ", cursive;
+  font-family: "Times New Roman", cursive;
   font-weight: normal;
-  color: lime;
+  color: Lime;
   font-size: 28px;
 }
 
+span{
+  font-size: 24px;
+}
+
+table{
+  font-family: arial, sans-serif;
+  border: 2px solid silver;
+  border-collapse: collapse;
+  width: 600px;
+}
+
+td, th{
+  border: 2px solid silver;
+  text-align: center;
+  padding: 8px;
+}
+
+.table{
+  margin-left: auto;
+  margin-right: auto;
+}
 
 .borda{
-border: 4px solid lime;
+  border: 4px solid Lime;
 }
